# sdl3_vulkan_examples

./: README.md
docs/: README.md
example_c_with_helper_cpp/: README.md
example_c_with_helper_cpp/01_bootstrap/: CMakeLists.txt  grok_notes.md
example_c_with_helper_cpp/01_bootstrap/src/: main.c  vulkan_init.cpp
example_c_with_helper_cpp/02_vulkan_memory_allocator/: CMakeLists.txt  README.md
example_c_with_helper_cpp/02_vulkan_memory_allocator/src/: main.c  vulkan_init.cpp
example_c_with_helper_cpp/03_spirv_cross/: CMakeLists.txt  SPIRV-Cross.md
example_c_with_helper_cpp/03_spirv_cross/src/: main.c  vulkan_init.cpp
example_c_with_helper_cpp/04_spirv_cross_r_2/: CMakeLists.txt
example_c_with_helper_cpp/04_spirv_cross_r_2/assets/: frag.glsl  vert.glsl
example_c_with_helper_cpp/04_spirv_cross_r_2/src/: main.c
example_c_with_helper_cpp/05_freetype_test/: FreeType.md  README.md
example_c_with_helper_cpp/05_freetype_test/assets/: frag.glsl
example_c_with_helper_cpp/05_freetype_test/src/: main.c
example_c_with_helper_cpp/06_freetype_hello_world/: CMakeLists.txt  README.txt
example_c_with_helper_cpp/06_freetype_hello_world/assets/: frag.glsl
example_c_with_helper_cpp/06_freetype_hello_world/src/: main.c  vulkan_init.h
example_c_with_helper_cpp/06_freetype_hello_world_r_2/: README.md  grok_create_text.md  grok_freetype.md  main_c_notes.md
example_c_with_helper_cpp/06_freetype_hello_world_r_2/src/: main.c  vulkan_init.cpp
example_c_with_helper_cpp/06_freetype_hello_world_r_3/: README.md  grok_design.md
example_c_with_helper_cpp/07_freetype_hello_world_r_4/: README.md
example_c_with_helper_cpp/07_freetype_hello_world_r_4/src/: main.c
example_c_with_helper_cpp/module_01/: CMakeLists.txt  README.md  build.bat
example_c_with_helper_cpp/module_01/assets/: vert.glsl
example_c_with_helper_cpp/module_01/include/: vsdl_camera.h  vsdl_vulkan_init.h
example_c_with_helper_cpp/module_01/src/: vsdl_log.c  vsdl_vulkan_init.cpp
example_c_with_helper_cpp/module_01_test01/: CMakeLists.txt  README.md  build.bat
example_c_with_helper_cpp/module_01_test01/include/: vsdl_log.h  vsdl_mesh.h  vsdl_types.h
example_c_with_helper_cpp/module_01_test01/src/: main.c  vsdl_camera.c  vsdl_mesh.c
example_c_with_helper_cpp/module_02/: CMakeLists.txt  README.md  build.bat
example_c_with_helper_cpp/module_02/include/: vsdl_render.h  vsdl_types.h  vsdl_vulkan_init.h
example_c_with_helper_cpp/module_02/src/: main.c  test_sdl.c  vsdl_camera.c  vsdl_mesh.c  vsdl_render.c  vsdl_vulkan_init.cpp
example_c_with_helper_cpp/module_header_vma_volk/: CMakeLists.txt  README.md
example_c_with_helper_cpp/module_header_vma_volk/include/: vsdl_types.h
example_c_with_helper_cpp/module_header_vma_volk/src/: main.c  vma_impl.c  vsdl_cleanup.c  vsdl_init.c
example_c_with_helper_cpp/triangle_h_vma_volk/: CMakeLists.txt  README.md  build.bat  run.bat
example_c_with_helper_cpp/triangle_h_vma_volk/src/: main.c
example_c_with_helper_cpp/triangle_h_vma_volk_loader/: CMakeLists.txt  README.md  build.bat  main_ref.md
example_c_with_helper_cpp/triangle_h_vma_volk_loader/src/: deps.cpp  main.c
example_cpp/: README.md
example_cpp/01_triangle/: CMakeLists.txt  README.md  main.cpp
example_cpp/02_vma/: README.md  build.bat  main.cpp
example_cpp/03_vma_staging/: main.cpp
example_cpp/04_resize_window/: CMakeLists.txt  main.cpp
example_cpp/05_resize_view/: README.md  main.cpp
example_cpp/archives_modules/module_01/: README.md
example_cpp/archives_modules/module_02/: README.md
example_cpp/archives_modules/module_05/: README.md
example_cpp/archives_modules/module_06/: README.md
example_cpp/archives_modules/module_07/: README.md
example_cpp/archives_modules/module_08/: README.md
example_cpp/archives_modules/module_09/: README.md
example_cpp/archives_modules/module_10/: README.md
example_cpp/archives_modules/module_11/: CMakeLists.txt
example_cpp/imgui01/: CMakeLists.txt  README.md  run.bat
example_cpp/imgui01/src/: main.cpp
example_cpp/module_01/: CMakeLists.txt
example_cpp/module_01/src/: vsdl_cleanup.cpp  vsdl_pipeline.cpp
example_cpp/module_02/: README.md
example_cpp/module_02/include/: vsdl_types.h
example_cpp/module_02/shaders/: tri.frag
example_cpp/module_02/src/: vma_impl.cpp  vsdl_cleanup.cpp  vsdl_renderer.cpp
example_cpp/module_03/: README.md
example_cpp/module_03/include/: vsdl_types.h
example_cpp/module_03/src/: main.cpp  vsdl_mesh.cpp  vsdl_pipeline.cpp
example_cpp/module_04/: README.md
example_cpp/module_04/include/: vsdl_pipeline.h
example_cpp/module_04/src/: vsdl_renderer.cpp
example_cpp/module_05/include/: vsdl_types.h
example_cpp/module_05/src/: vsdl_cleanup.cpp  vsdl_renderer.cpp
example_cpp/module_06/include/: vsdl_mesh.h
example_cpp/module_06/src/: vsdl_mesh.cpp  vsdl_pipeline.cpp  vsdl_renderer.cpp
example_cpp/module_07/shaders/: tri.vert
example_cpp/module_07/src/: vsdl_renderer.cpp
example_cpp/module_08/src/: vsdl_mesh.cpp  vsdl_pipeline.cpp
example_cpp/module_09/include/: vsdl_mesh.h
example_cpp/module_09/src/: vsdl_cleanup.cpp  (+1 more)
example_cpp/module_11/: README.md
example_cpp/module_vma_volk_headers/: CMakeLists.txt  README.md
examples_c/: README.md
examples_c/01_triangle/: CMakeLists.txt
examples_c/03_create_destory_test/: README.md
examples_c/04_face_clockwise/: README.md
examples_c/basic_setup_01/: CMakeLists.txt
examples_c/basic_setup_02/: README.md  main.c
examples_c/module_builds/: README.md
examples_c/module_builds/01_triangle/: CMakeLists.txt  build.bat  run.bat
examples_c/module_builds/01_triangle/include/: vsdl_clean_up.h  vsdl_init.h  vsdl_loop.h  vsdl_mesh.h  vsdl_pipeline.h  vsdl_types.h
examples_c/module_builds/01_triangle/src/: main.c  vsdl_clean_up.c  vsdl_init.c  vsdl_loop.c  vsdl_mesh.c  vsdl_pipeline.c  vsdl_types.c
examples_c/triangle_camera_move_rotate/: CMakeLists.txt  README.md
examples_c/triangle_camera_move_rotate/src/: main.c
examples_c_renderer/: CMakeLists.txt  README.md  build.bat  run.bat
examples_c_renderer/src/: main.c  main_no_align.c
(+30 files in other folders)
